flex-box for attractions

--- a/index.css
+++ b/index.css
@@ -1,4 +1,25 @@
 h1 {
   text-align: center;
-  
+
+}
+.row {
+  display: flex; /* or inline-flex */
+  flex-wrap: wrap;
+
+}
+.glacier {
+  /*flex: 1;*/
+  flex-basis: 50%;
+
+
+}
+
+.yellowstone{
+  /*flex: 1;*/
+
+  flex-basis: 50%;
+}
+.attractionPhotos {
+max-width: 300px;
+
 }
