--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #E6E6FA;
+}
 h1 {
   text-align: center;
 
@@ -5,21 +8,27 @@ h1 {
 .row {
   display: flex; /* or inline-flex */
   flex-wrap: wrap;
+  justify-content: center;
+
 
 }
-.glacier {
+.glacier, .buddha, .flathead, .yellowstone {
   /*flex: 1;*/
   flex-basis: 50%;
+  border: solid;
+  border-radius: 5%;
+  background-color: white;
+  justify-content: space-around;
+  align-items: center;
+
 
 
 }
 
-.yellowstone{
-  /*flex: 1;*/
 
-  flex-basis: 50%;
-}
 .attractionPhotos {
-max-width: 300px;
+/*max-width: 360px;*/
+max-height: 100%;
+width: 100%;
 
 }
