--- a/index.css
+++ b/index.css
@@ -1,34 +1,36 @@
 body {
-  background-color: #E6E6FA;
-}
-h1 {
-  text-align: center;
 
+}
+h1, h3, h4, h5 {
+  text-align: center;
+}
+.mt {
+  display: flex;
+  flex-wrap: wrap;
 }
 .row {
   display: flex; /* or inline-flex */
   flex-wrap: wrap;
-  justify-content: center;
+  align-content: space-around;
+
 
 
 }
 .glacier, .buddha, .flathead, .yellowstone {
+  padding: 2rem;
   /*flex: 1;*/
   flex-basis: 50%;
   border: solid;
   border-radius: 5%;
   background-color: white;
-  justify-content: space-around;
-  align-items: center;
-
-
+  align-content: center;
 
 }
 
 
 .attractionPhotos {
 /*max-width: 360px;*/
-max-height: 100%;
-width: 100%;
+max-height: 50%;
+max-width: 100%;
 
 }
