--- a/index.css
+++ b/index.css
@@ -1,36 +1,33 @@
-body {
-
+container {
+  width: 50%;
 }
 h1, h3, h4, h5 {
   text-align: center;
+  margin: 20px;
 }
-.mt {
+
+h3,  h4 {
+    padding-bottom: 60px !important;
+}
+h5{
+ flex: 
+ }
+
+.row {
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
-}
-.row {
-  display: flex; /* or inline-flex */
-  flex-wrap: wrap;
   align-content: space-around;
-
-
-
 }
-.glacier, .buddha, .flathead, .yellowstone {
-  padding: 2rem;
-  /*flex: 1;*/
-  flex-basis: 50%;
-  border: solid;
-  border-radius: 5%;
-  background-color: white;
-  align-content: center;
 
+.glacierPhoto, .glacier, .buddha, .buddhaPhoto, .flathead, .flatheadPhoto, .yellowstone, .yellowstonePhoto {
+  flex-basis: 50%;
+  background-color: black;
+  color: darkgray;
 }
 
 
 .attractionPhotos {
-/*max-width: 360px;*/
-max-height: 50%;
-max-width: 100%;
-
+height: 100%;
+width: 100%;
 }
