attractions css file, flexbox to index

--- a/index.css
+++ b/index.css
@@ -3,54 +3,39 @@ body {
 
 }
 #daisy {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 0;
 
 }
-#Sunflower {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: -1;
-  height: 300px;
+/*@media screen and (max-width: ) {
+}*/
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #Sunflower {
+      height: 200pt;
+    }
 }
+ #Sunflower {
+   z-index: -1;
+   position: absolute;
+   left: 0;
+   text-align: center;
+ }
 .gettingMarried {
+  z-index: 0;
+  position: absolute;
   font-family: 'Parisienne', cursive;
   color: rgb(255,227,76);
+  font-size: 12pt;
+  left: 150pt;
+  top: 270pt;
+
+
 
 }
-container {
-  width: 50%;
-}
-h1, h3, h4, h5 {
-  text-align: center;
-  margin: 20px;
-}
-
-h3,  h4 {
-    padding-bottom: 60px !important;
-}
-h5{
- flex:
- }
-
-.row {
-  margin: 20px;
+.flexbox {
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-around;
-}
+  flex-direction: row;
 
-.glacierPhoto, .glacier, .buddha, .buddhaPhoto, .flathead, .flatheadPhoto, .yellowstone, .yellowstonePhoto {
-  flex-basis: 50%;
-  background-color: black;
-  color: darkgray;
-}
-
-
-.attractionPhotos {
-height: 100%;
-width: 100%;
 }
