--- a/Attractions.css
+++ b/Attractions.css
@@ -1,36 +1,22 @@
+.boxForWholePage {
 
-body {
-  background-color: rgb(66,4,32);
+  background-color: rgba(220, 220, 220, 0.9);
 
-}
-#daisy {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 0;
-
-}
-
-container {
-  width: 50%;
 }
 h1, h3, h4, h5 {
   text-align: center;
-  margin: 20px;
 }
 
 h3,  h4 {
     padding-bottom: 60px !important;
 }
-h5{
- flex:
- }
+
 
 .row {
-  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
+
 }
 
 .glacierPhoto, .glacier, .buddha, .buddhaPhoto, .flathead, .flatheadPhoto, .yellowstone, .yellowstonePhoto {
