--- a/index.css
+++ b/index.css
@@ -6,19 +6,96 @@
 flex-wrap: wrap;
 }
 
- .sunflower {
+ /*.sunflower {
 background-image: url("photos/Sunflower.jpg");
 background-repeat: no-repeat;
 background-size: contain;
 margin: -6% 50% 10% 50%;
 height: 770px;
 width: 770px;
-display: flex;
+
+}*/
+.getting {
+  margin: 0pt 0pt 0pt 30pt;
+  color: rgb(51,51,51);
 }
 
-.gettingMarried {
-  font-family: 'Parisienne', cursive;
-  color: rgb(255,227,76);
-  margin: auto;
-  text-align: center;
-  }
+#gettingMarried {
+
+font-family: Gill Sans, Verdana;
+font-size: 14px;
+line-height: 14px;
+text-transform: uppercase;
+letter-spacing: 2px;
+font-weight: bold;
+}
+
+#weddingDate {
+font-family: times, Times New Roman, times-roman, georgia, serif;
+margin: 0;
+padding: 0px 0px 6px 0px;
+font-size: 51px;
+line-height: 44px;
+letter-spacing: -2px;
+font-weight: bold;
+}
+#fiveOClock {
+   /*-webkit-transform: translateX(-39px) translateY(59px) rotate(-10deg);*/
+   word-wrap: normal;
+
+}
+
+
+#container { margin: 5%; }
+
+#circle { position: relative; width: 100%; padding-bottom: 100%; overflow: hidden;}
+
+#circle text { font-family: 'Helvetica Neue', Arial; font-size: 16px; font-weight: bold;}
+
+#circle svg { position: absolute; left: 0; top: 0; width: 100%; height: 100%;
+
+ -webkit-animation-name: rotate;
+    -moz-animation-name: rotate;
+     -ms-animation-name: rotate;
+      -o-animation-name: rotate;
+         animation-name: rotate;
+ -webkit-animation-duration: 200s;
+    -moz-animation-duration: 200s;
+     -ms-animation-duration: 200s;
+      -o-animation-duration: 200s;
+         animation-duration: 200s;
+ -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+     -ms-animation-iteration-count: infinite;
+      -o-animation-iteration-count: infinite;
+         animation-iteration-count: infinite;
+ -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+     -ms-animation-timing-function: linear;
+      -o-animation-timing-function: linear;
+         animation-timing-function: linear;
+          background-image: url("photos/sunflower.jpg");
+          background-repeat: no-repeat;
+          background-size: contain;
+}
+
+@-webkit-keyframes rotate {
+   from { -webkit-transform: rotate(360deg); }
+   to { -webkit-transform: rotate(0); }
+}
+@-moz-keyframes rotate {
+   from { -moz-transform: rotate(360deg); }
+   to { -moz-transform: rotate(0); }
+}
+@-ms-keyframes rotate {
+   from { -ms-transform: rotate(360deg); }
+   to { -ms-transform: rotate(0); }
+}
+@-o-keyframes rotate {
+   from { -o-transform: rotate(360deg); }
+   to { -o-transform: rotate(0); }
+}
+@keyframes rotate {
+   from { transform: rotate(360deg); }
+   to { transform: rotate(0); }
+}
