--- a/index.css
+++ b/index.css
@@ -6,6 +6,15 @@
 flex-wrap: wrap;
 }
 
+img {
+  height: "400px";
+}
+
+@media screen and (min-width: 480px) {
+    body {
+        background-color: lightgreen;
+    }
+}
  /*.sunflower {
 background-image: url("photos/Sunflower.jpg");
 background-repeat: no-repeat;
