--- a/index.css
+++ b/index.css
@@ -5,22 +5,49 @@
 .call-out {
 flex-wrap: wrap;
 }
+#happy {
+  border-style: groove;
+  border-radius: 15px;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-width: medium;
+  box-shadow: 12px 12px 12px 11px rgba(0, 0, 0, 0.2);
+}
 
-@media screen and (min-width: 580px) {
-  img {
-    height: "400px" !important;
+@media screen and (min-width: 581px max-with: 768px) {
+  #happy {
+    width: 900px;
+
   }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 580px) {
   body {
-    background-color: rgb(255, 100, 210);
+    background-color: rgba(135, 20, 79, 0.9);
+
   }
-  img {
-    max-height: "10px";
+
+}
+@media screen and (max-width: 580px) {
+  #happy {
+    max-width: 100%;
+    max-height: auto;
   }
 }
 
+@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
+  #happy {
+    max-width: 100%;
+    margin-left: 30%;
+  }
+}
+
+@media only screen  and (min-width : 1224px) {
+  #happy {
+    max-width: 900px;
+    margin: 20%;
+  }
+}
 /*@media screen and (min-width: 480px) {*/
 
 /*}*/
@@ -35,7 +62,7 @@ width: 770px;
 }*/
 .getting {
   margin: 0pt 0pt 0pt 30pt;
-  color: rgb(51,51,51);
+  color: rgb(220,220,220);
 }
 
 #gettingMarried {
@@ -64,9 +91,9 @@ font-weight: bold;
 }
 
 
-/*#container { margin: 5%; }*/
+/*#container { margin: 5%; }
 
-/*#circle { position: relative; width: 100%; padding-bottom: 100%; overflow: hidden;}
+#circle { position: relative; width: 100%; padding-bottom: 100%; overflow: hidden;}
 
 #circle text { font-family: 'Helvetica Neue', Arial; font-size: 16px; font-weight: bold;}
 
@@ -92,7 +119,7 @@ font-weight: bold;
      -ms-animation-timing-function: linear;
       -o-animation-timing-function: linear;
          animation-timing-function: linear;
-          /*background-image: url("images/sunflower.jpg");
+          background-image: url("images/sunflower.jpg");
           background-repeat: no-repeat;
-          background-size: contain;*/
-/*}*/
+          background-size: contain;
+}*/
