mobile responsive changes for attractions page

--- a/Attractions.css
+++ b/Attractions.css
@@ -1,16 +1,89 @@
-.boxForWholePage {
+/*body {
+  background-image: url("images/roses.JPG");
+}*/
 
-  background-color: rgba(220, 220, 220, 0.9);
+.boxForDescriptions {
+  background-color:  rgba(20,100,106, 0.4);
+}
+@media screen and (max-width: 580px) {
 
+  .jumbotron {
+    background-image: url('images/jumbo.PNG');
+    background-size: cover;
+    padding: 0px 0px 150px 0px;
+  }
+
+  h1 {
+    font-family: times, Times New Roman, times-roman, georgia, serif;
+    margin: 0;
+    padding: 0px 0px 6px 0px;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: bold;
+  }
+
+  h3,  h4 {
+      padding-bottom: 60px !important;
+  }
+  h3 {
+    font-family: Gill Sans, Verdana;
+    font-size: 17px;
+    line-height: 24px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  h4 {
+    font-family: times, Times New Roman, times-roman, georgia, serif;
+    margin: 0;
+    padding: 0px 0px 6px 0px;
+    font-size: 12px;
+    line-height: 22px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 581px) {
+
+  .jumbotron {
+    background-image: url('images/jumbo.PNG');
+    background-size: cover;
+    padding: 0px 0px 450px 0px;
+  }
+
+  h1 {
+    font-family: times, Times New Roman, times-roman, georgia, serif;
+    margin: 0;
+    padding: 0px 0px 6px 0px;
+    font-size: 31px;
+    line-height: 44px;
+    letter-spacing: -2px;
+    font-weight: bold;
+  }
+
+  h3,  h4 {
+      padding-bottom: 60px !important;
+  }
+  h3 {
+    font-family: Gill Sans, Verdana;
+    font-size: 14px;
+    line-height: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+  }
+  h4 {
+    font-family: times, Times New Roman, times-roman, georgia, serif;
+    margin: 0;
+    padding: 0px 0px 6px 0px;
+    font-size: 31px;
+    line-height: 44px;
+    letter-spacing: -2px;
+    font-weight: bold;
+  }
 }
 h1, h3, h4, h5 {
   text-align: center;
 }
-
-h3,  h4 {
-    padding-bottom: 60px !important;
-}
-
 
 .row {
   display: flex;
@@ -21,8 +94,9 @@ h3,  h4 {
 
 .glacierPhoto, .glacier, .buddha, .buddhaPhoto, .flathead, .flatheadPhoto, .yellowstone, .yellowstonePhoto {
   flex-basis: 50%;
-  background-color: black;
-  color: darkgray;
+  color: white;
+  background-image: url("images/roses.JPG");
+  background-repeat: no-repeat;
 }
 
 
