--- a/index0.css
+++ b/index0.css
@@ -6,30 +6,11 @@
 .call-out {
 flex-wrap: wrap;
 }*/
-/*.navbar {
+.navbar {
     color: rgb(218,190,206);
     position: relative;
     top: 0;
 
-}*/
-.navbar-fixed-bottom, .navbar-fixed-top {
-    position: fixed;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-    background: url(https://s3.amazonaws.com/creativetim_bucket/products/46/mk_pro_cover.jpg?1466002372)no-repeat;
-background-size: cover;
-  }
-.leftBoxes {
-  border-left: solid;
-  border-width: medium;
-  border-color: black;
-}
-
-.rightBoxes {
-  border-right: solid;
-  border-width: medium;
-  border-color: black;
 }
 
 #gettingMarried {
@@ -58,6 +39,7 @@ background-size: cover;
 .boxed {
   background-image: url('images/roses.JPG');
   color: white;
+  height: 200px;
   border-width: medium;
   border-style: solid;
   border-color: rgba(135, 20, 79, 0.9);
@@ -71,6 +53,7 @@ font-family: 'Nothing You Could Do', cursive;*/
 }
 
 @media screen and (max-width: 580px) {
+
   .jumbotron {
     background-image: url('images/jumbo.PNG');
     background-size: cover;
@@ -79,14 +62,44 @@ font-family: 'Nothing You Could Do', cursive;*/
   .getting {
     margin: 0pt 0pt 0pt 30pt;
     color: rgb(5, 5, 5);
-  }
+    }
 
+}
 
-  .boxForDescriptions {
-    background-color: RGB(240, 128, 128)
+@media screen and (min-width: 581px) {
+
+  .jumbotron {
+    background-image: url('images/jumbo.PNG');
     background-size: cover;
+    padding: 0px 0px 450px 0px;
   }
+  .getting {
+    color: black;
+    text-align: center;
+    }
 
+}
+
+
+
+@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
+  #happy {
+    max-width: 100%;
+    margin-left: 30%;
+  }
+}
+
+
+.boxForDescriptions {
+  background-color:  rgba(20,100,106, 0.4);
+}
+@media screen and (max-width: 580px) {
+
+  .jumbotron {
+    background-image: url('images/jumbo.PNG');
+    background-size: cover;
+    padding: 0px 0px 150px 0px;
+  }
 
   #goingToMontanaHeader {
     font-family: times, Times New Roman, times-roman, georgia, serif;
@@ -96,8 +109,6 @@ font-family: 'Nothing You Could Do', cursive;*/
     line-height: 34px;
     font-weight: bold;
     text-align: center;
-    padding-top: 75px;
-    padding-bottom: 15px;
   }
 
   .montana {
@@ -131,25 +142,22 @@ font-family: 'Nothing You Could Do', cursive;*/
     background-size: cover;
     padding: 0px 0px 450px 0px;
   }
-  .getting {
-    color: black;
-    text-align: center;
-  }
+
   #goingToMontanaHeader {
     font-family: times, Times New Roman, times-roman, georgia, serif;
     margin: 0;
     padding: 0px 0px 6px 0px;
-    font-size: 40px;
-    line-height: 64px;
+    font-size: 31px;
+    line-height: 44px;
     letter-spacing: -2px;
     font-weight: bold;
     text-align: center;
-    padding-top: 155px;
-    padding-bottom: 55px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .montana {
-    font-size: 70px;
+    font-size: 60px;
   }
 
   .attractionHeader,  .attractionDescription {
@@ -173,8 +181,7 @@ font-family: 'Nothing You Could Do', cursive;*/
     font-weight: bold;
   }
 }
-
-.attractionHeader, .attractionDescription, h5 {
+.title, .attractionHeader, .attractionDescription, h5 {
   text-align: center;
 }
 
@@ -182,21 +189,18 @@ font-family: 'Nothing You Could Do', cursive;*/
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
+
 }
 
 .glacierPhoto, .glacier, .buddha, .buddhaPhoto, .flathead, .flatheadPhoto, .yellowstone, .yellowstonePhoto {
   flex-basis: 50%;
-  color: black;
+  color: white;
+  background-image: url("images/roses.JPG");
+  background-repeat: no-repeat;
 }
+
 
 .attractionPhotos {
 height: 100%;
 width: 100%;
-}
-
-@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
-  #happy {
-    max-width: 100%;
-    margin-left: 30%;
-  }
 }
