new nav bar, padding for jumbotron on small media screen, remove background for wedding details box

--- a/index.css
+++ b/index.css
@@ -16,7 +16,9 @@ flex-wrap: wrap;
 body {
   padding-top: 54px;
 }
-
+#lotsToSee {
+  text-align: right;
+}
 
 
 .navbar-fixed-bottom, .navbar-fixed-top {
@@ -27,7 +29,7 @@ body {
     background-color: rgb(88, 24, 69);
     color: white;
   }
-.leftBoxes {
+/*.leftBoxes {
   border-left: solid;
   border-width: medium;
   border-color: black;
@@ -37,7 +39,7 @@ body {
   border-right: solid;
   border-width: medium;
   border-color: black;
-}
+}*/
 
 #gettingMarried {
 
@@ -63,18 +65,13 @@ body {
 }
 
 .boxed {
-  background-image: url('images/roses.JPG');
-  color: white;
-  border-width: medium;
-  border-style: solid;
-  border-color: rgba(135, 20, 79, 0.9);
-  border-radius: 5px;
+  color: black;
   margin: 5px;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-/*font-family: 'Great Vibes', cursive;
-font-family: 'Bad Script', cursive;
-font-family: 'Nothing You Could Do', cursive;*/
+  /*font-family: 'Indie Flower', cursive;*/
+/*font-family: 'Great Vibes', cursive;*/
+/*font-family: 'Bad Script', cursive;*/
+font-family: 'Nothing You Could Do', cursive;
 }
 
 @media screen and (max-width: 580px) {
@@ -82,6 +79,7 @@ font-family: 'Nothing You Could Do', cursive;*/
     background-image: url('images/jumbo.PNG');
     background-size: cover;
     padding: 0px 0px 150px 0px;
+    margin-top: 180px;
   }
   .mx-auto {
     height: 200px;
@@ -97,7 +95,7 @@ font-family: 'Nothing You Could Do', cursive;*/
     flex-wrap: wrap;
     align-content: space-around;
   }
-  
+
   .boxForDescriptions {
     background-color: RGB(240, 128, 128)
     background-size: cover;
@@ -107,12 +105,12 @@ font-family: 'Nothing You Could Do', cursive;*/
   #goingToMontanaHeader {
     font-family: times, Times New Roman, times-roman, georgia, serif;
     margin: 0;
-    padding: 0px 0px 6px 0px;
+    /*padding: 0px 0px 6px 0px;*/
     font-size: 24px;
     line-height: 34px;
     font-weight: bold;
-    text-align: center;
-    padding-top: 75px;
+    text-align: left;
+    padding-top: 15px;
     padding-bottom: 15px;
   }
 
@@ -166,9 +164,9 @@ font-family: 'Nothing You Could Do', cursive;*/
     line-height: 64px;
     letter-spacing: -2px;
     font-weight: bold;
-    text-align: center;
-    padding-top: 155px;
-    padding-bottom: 55px;
+    text-align: left;
+    /*padding-top: 155px;
+    padding-bottom: 55px;*/
   }
 
   .montana {
