--- a/index.css
+++ b/index.css
@@ -1,23 +1,10 @@
-
-/*.flexbox-container {
-  display: flex;
-}
-
-.call-out {
-flex-wrap: wrap;
-}*/
-/*.navbar {
-    color: rgb(218,190,206);
-    position: relative;
-    top: 0;
-
-}*/
-
 body {
   padding-top: 54px;
+  background-color: rgb(172,102,131);
+  color: white;
 }
 #lotsToSee {
-  text-align: right;
+  text-align: center;
 }
 
 
@@ -29,17 +16,6 @@ body {
     background-color: rgb(88, 24, 69);
     color: white;
   }
-/*.leftBoxes {
-  border-left: solid;
-  border-width: medium;
-  border-color: black;
-}
-
-.rightBoxes {
-  border-right: solid;
-  border-width: medium;
-  border-color: black;
-}*/
 
 #gettingMarried {
 
@@ -65,19 +41,14 @@ body {
 }
 
 .boxed {
-  color: black;
   margin: 5px;
   text-align: center;
-  /*font-family: 'Indie Flower', cursive;*/
-/*font-family: 'Great Vibes', cursive;*/
-/*font-family: 'Bad Script', cursive;*/
-font-family: 'Nothing You Could Do', cursive;
 }
 
 @media screen and (max-width: 580px) {
   .jumbotron {
     background-image: url('images/jumbo.PNG');
-    background-size: cover;
+    background-size: contain;
     padding: 0px 0px 150px 0px;
     margin-top: 180px;
   }
@@ -97,7 +68,6 @@ font-family: 'Nothing You Could Do', cursive;
   }
 
   .boxForDescriptions {
-    background-color: RGB(240, 128, 128)
     background-size: cover;
   }
 
@@ -105,7 +75,6 @@ font-family: 'Nothing You Could Do', cursive;
   #goingToMontanaHeader {
     font-family: times, Times New Roman, times-roman, georgia, serif;
     margin: 0;
-    /*padding: 0px 0px 6px 0px;*/
     font-size: 24px;
     line-height: 34px;
     font-weight: bold;
@@ -147,7 +116,7 @@ font-family: 'Nothing You Could Do', cursive;
   }
 
   .getting {
-    color: black;
+    color: WHITE;
     text-align: center;
   }
 
